[tool.poetry]
name = "ajax-views"
version = "0.8.0"
description = "A simple Django application to easily use AJAX views with JavaScript."
authors = ["Mihail Mishakin <x896321475@gmail.com>"]
maintainers = ["Mihail Mishakin <x896321475@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [
    { include = "ajax_views" },
]

[tool.poetry.urls]
repository = "https://github.com/dldevinc/ajax-views"

[tool.poetry.dependencies]
python = "^3.9"
django = ">=3.2"

[tool.poetry.group.pytest]
optional = true

[tool.poetry.group.pytest.dependencies]
pytest = "^8.3.4"
pytest-xdist = "^3.6.1"
pytest-django = "^4.9.0"
pytest-cov = "*"

[tool.isort]
extend_skip = [".md", ".json"]
line_length = 90
known_first_party = ["ajax_views"]
multi_line_output = 5

[tool.flake8]
max-line-length = 90
extend-exclude = [
    "tests",
    "migrations",
]
per-file-ignores = [
    "__init__.py: F401",    # imported but unused
    "apps.py: F401",        # imported but unused
]
extend-ignore = [
    # "E501",               # line too long
    "E128",                 # continuation line under-indented for visual indent
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
pythonpath = [
    "./tests"
]
addopts = "--showlocals -rf -s"
norecursedirs = [
    "*.egg",
    ".*",
    "_darcs",
    "build",
    "CVS",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    "{arch}",
    "__pycache__",
]

[tool.coverage.run]
source = [
    "ajax_views/",
]
omit = [
    "*/tests/*",
    "*/migrations/*",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
