[metadata]
name = ajax-views
version = attr: ajax_views.__version__
description = A simple Django application to easily use AJAX views with JavaScript.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dldevinc/ajax-views
license = BSD
author = Mihail Mishakin
author_email = x896321475@gmail.com
maintainer = Mihail Mishakin
maintainer_email = x896321475@gmail.com
platforms = OS Independent
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Framework :: Django
  Framework :: Django :: 1.11
  Framework :: Django :: 2.0
  Framework :: Django :: 2.1
  Framework :: Django :: 2.2
  Framework :: Django :: 3.0
  Framework :: Django :: 3.1
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Internet :: WWW/HTTP

[bdist_wheel]
universal = 1

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.5
install_requires =
  Django >= 1.11
packages = find:

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 90
known_first_party = app

[flake8]
max-line-length = 90
max-complexity = 10
exclude =
  migrations/
  tests/
ignore =
  # Line too long
  E501,
  # Continuation line under-indented for visual indent
  E128,
  # Line break after binary operator
  W504

[mypy]
files = ajax_views
strict_optional = False
check_untyped_defs = True
allow_redefinition = True
pretty = True

[coverage:run]
source = ajax_views
omit =
  *migrations*
  *tests*
